--- a/src/html/base_layout.mustache
+++ b/src/html/base_layout.mustache
@@ -16,4 +16,9 @@
 
 </div>
 
+<div class="testimonies">
+    <h2>The journey</h2>
+    <div class="testimony_steps"></div>
+</div>
+
 <div class="debug_output"></div>
