Added testimony wrapper and end page

--- a/src/html/base_layout.mustache
+++ b/src/html/base_layout.mustache
@@ -1,4 +1,4 @@
-<div class="gi_container">
+<div class="game_wrapper">
     <div class="status">
         <p class="cost">Cost: <span class="cost_value"></span></p>
         <p class="days">Cost: <span class="days_value"></span></p>
@@ -19,6 +19,13 @@
 <div class="testimonies">
     <h2>The journey</h2>
     <div class="testimony_steps"></div>
+
+    <button class="testimonies_restart_btn">Start again</button>
+
+    <div class="share_links">
+        <a class="twitter_share">Twitter</a>
+        <a class="facebook_share">Facebook</a>
+    </div>
 </div>
 
 <div class="debug_output"></div>
