--- a/src/html/base_layout.mustache
+++ b/src/html/base_layout.mustache
@@ -1,18 +1,10 @@
 <div class="game_wrapper">
-    <div class="status">
-        <p class="cost">Cost: <span class="cost_value"></span></p>
-        <p class="days">Cost: <span class="days_value"></span></p>
-    </div>
+    <div class="scene_container"></div>
 
-    <div class="scene_container">
-        <div class="scene_content"></div>
-        <div class="scene_text"></div>
-    </div>
-
-    <div class="control_wrapper">
-        <p class="choice_text"></p>
-        <div class="button_container"></div>
-    </div>
+    <!--<div class="control_wrapper">-->
+        <!--<p class="choice_text"></p>-->
+        <!--<div class="button_container"></div>-->
+    <!--</div>-->
 
 </div>
 
@@ -27,5 +19,3 @@
         <a class="facebook_share">Facebook</a>
     </div>
 </div>
-
-<div class="debug_output"></div>
