--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -63,7 +63,6 @@
         margin-top: 20px;
     }
 
-
     button {
         font-family: monospace;
         border: 1px solid #fff;
@@ -75,7 +74,7 @@
     }
 
     button:hover {
-        background: #fff;
+        background: #999;
         color: #000;
     }
 
