--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,13 +1,11 @@
 @import '_base';
 
+figure {
+    margin: 0;
+}
+
 .game_wrapper {
     background: #EEE;
-    background-image: url(http://placehold.it/960x500);
-    background-repeat: no-repeat;
-    background-size: contain;
-    padding: 40% 40px 10px 40px;
-    font-family: arial, sans-serif;
-
     color: #222;
     font-size: 14px;
     line-height: 16px;
@@ -18,6 +16,14 @@
         video {
             width: 100%;
         }
+    }
+
+    .scene {
+        background-image: url(http://placehold.it/960x500);
+        background-repeat: no-repeat;
+        background-size: contain;
+        padding: 40% 40px 10px 40px;
+        font-family: arial, sans-serif;
     }
 
     .scene-title {
@@ -63,7 +69,7 @@
         margin-top: 20px;
     }
 
-    button {
+    .choice_btn {
         font-family: monospace;
         border: 1px solid #fff;
         background-color: #000;
@@ -71,6 +77,17 @@
         cursor: pointer;
         font-size: 14px;
         padding: 6px 20px;
+
+        &.disabled {
+            color: #d5d5d5;
+            background-color: #eaeaea;
+            &.picked {
+                color: #dcdcdc;
+                background-color: #a0a0a0;
+            }
+        }
+
+
     }
 
     button:hover {
