--- a/src/html/view_scene.mustache
+++ b/src/html/view_scene.mustache
@@ -1,9 +1,11 @@
-<h2 class="scene-title">{{ title }}</h2>
-<div class="scene-inner">
-    <div class="testimony">{{{ testimony }}}</div>
-    <div class="scene-copy">{{{ sceneText }}}</div>
-    <div class="choices">
-        <p class="choice_text">{{ choiceText }}</p>
-        <div class="button_container"></div>
+<div class="scene">
+    <h2 class="scene-title">{{ title }}</h2>
+    <div class="scene-inner">
+        <div class="testimony">{{{ testimony }}}</div>
+        <div class="scene-copy">{{{ sceneText }}}</div>
+        <div class="choices">
+            <p class="choice_text">{{ choiceText }}</p>
+            <div class="button_container"></div>
+        </div>
     </div>
 </div>
