--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -26,6 +26,12 @@ figure {
         font-family: arial, sans-serif;
     }
 
+    .insert-image {
+        float: right;
+        margin: 0 0 5px 5px;
+        max-width: 150px;
+    }
+
     .scene-title {
         background: rgba(0, 0, 0, 0.6);
         color: #FFF;
