--- a/src/html/content/aleppo.mustache
+++ b/src/html/content/aleppo.mustache
@@ -1,5 +1,21 @@
 <p>Your name is Karima. Your are a 28-year-old Sunni woman from Aleppo, and you have two children, a girl aged 10 and a boy aged 14.</p>
 
+<h2>Audio sample</h2>
+<audio controls="" preload="none">
+    <source src="http://www.html5rocks.com/en/tutorials/audio/quick/test.mp3" type="audio/mpeg">
+    <source src="http://www.html5rocks.com/en/tutorials/audio/quick/test.ogg" type="audio/ogg">
+</audio>
+
+
 <p>Your husband was killed in a mortar attack three months ago. You now realise you must, for your children’s sake, get out of Syria. You know many people who have left Syria, most to neighbouring countries where they are in refugee camps and some who have made it to northern European countries and been given refugee protection.</p>
+
+<h2>Video sample</h2>
+<video id="video" controls="" preload="none" poster="http://media.w3.org/2010/05/sintel/poster.png">
+    <source id="mp4" src="http://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4">
+    <source id="webm" src="http://media.w3.org/2010/05/sintel/trailer.webm" type="video/webm">
+    <source id="ogv" src="http://media.w3.org/2010/05/sintel/trailer.ogv" type="video/ogg">
+    <p>Your user agent does not support the HTML5 Video element.</p>
+</video>
+
 
 <p>You have some money you could use for your journey so now your choices begin.</p>
