adding real video

--- a/src/html/content/bulgaria_again.mustache
+++ b/src/html/content/bulgaria_again.mustache
@@ -1,1 +1,15 @@
-<p>This time, when you reach the border the guards that pick you up take you to one of several camps that have been set up to house Syrian refugees, you are told that the camp is called Harmanli. It is an open air detention centre and you are not allowed to leave, so there is no chance to move further into Europe or to turn back and return to Turkey. The conditions are extremely bad, with little or no official presence, no reception process and very little food. Many thousands of migrants, not only Syrians, but Afghans, Bangladeshis and even some Africans have started to take what was previously a barely used route into the EU, from Turkey and into Bulgaria. An estimated 5,000 refugees from Syria arrived between January and November 2013 (Amnesty int. figures) In a recent visit, the Guardian found a complete lack of official support for newly arrived refugees, and very poor conditions inside. One heavily pregnant woman, separated from her husband in Turkey, was being refused permission to leave the camp to give birth. VIDEO INSERT – film in Harmani, interviews with Syrians detained there. There is no way forward or back for you, the UNHCR is pushing for improved conditions in Bulgaria, and the government has promised to provide more support, but for now, you are stuck</p>
+<p>This time, when you reach the border the guards that pick you up take you to one of several camps that have been set up to house Syrian refugees, you are told that the camp is called Harmanli.</p>
+
+<p>It is an open air detention centre and you are not allowed to leave, so there is no chance to move further into Europe or to turn back and return to Turkey. The conditions are extremely bad, with little or no official presence, no reception process and very little food. Many thousands of migrants, not only Syrians, but Afghans, Bangladeshis and even some Africans have started to take what was previously a barely used route into the EU, from Turkey and into Bulgaria. An estimated 5,000 refugees from Syria arrived between January and November 2013 (Amnesty int. figures) </p>
+
+<p>In a recent visit, the Guardian found a complete lack of official support for newly arrived refugees, and very poor conditions inside. One heavily pregnant woman, separated from her husband in Turkey, was being refused permission to leave the camp to give birth.</p>
+
+<h2>A Harmanli story</h2>
+<video id="video" controls="" preload="none" poster="http://media.w3.org/2010/05/sintel/poster.png">
+    <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2013/12/20/BulgariaCampConditions_h264i.mp4" type="video/mp4">
+    <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2013/12/20/BulgariaCampConditions.webm" type="video/webm">
+    <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2013/12/20/BulgariaCampConditions_h264i.ogv" type="video/ogg">
+    <p>Your user agent does not support the HTML5 Video element.</p>
+</video>
+
+<p>There is no way forward or back for you, the UNHCR is pushing for improved conditions in Bulgaria, and the government has promised to provide more support, but for now, you are stuck</p>
