added poster frames

--- a/src/html/content/bulgaria_again.mustache
+++ b/src/html/content/bulgaria_again.mustache
@@ -5,7 +5,7 @@
 <p>In a recent visit, the Guardian found a complete lack of official support for newly arrived refugees, and very poor conditions inside. One heavily pregnant woman, separated from her husband in Turkey, was being refused permission to leave the camp to give birth.</p>
 
 <h2>A Harmanli story</h2>
-<video id="video" controls="" preload="none" poster="http://media.w3.org/2010/05/sintel/poster.png">
+<video id="video" controls="" preload="none" poster="vlcsnap-2013-12-20-16h57m47s41.png">
     <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2013/12/20/BulgariaCampConditions_h264i.mp4" type="video/mp4">
     <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2013/12/20/BulgariaCampConditions.webm" type="video/webm">
     <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2013/12/20/BulgariaCampConditions_h264i.ogv" type="video/ogg">
