Fixed single quotes in HTML

--- a/src/html/content/asylum_1.mustache
+++ b/src/html/content/asylum_1.mustache
@@ -4,6 +4,6 @@
 
 <p>Unfortunately there is a catch. In order to apply for asylum in Sweden you need to actually get there first. This is true of most northern European countries.</p>
 
-<p>For example, The UK and France have high recognition rates for Syrians who apply for asylum within their borders but they don't take applications at their foreign embassies.</p>
+<p>For example, The UK and France have high recognition rates for Syrians who apply for asylum within their borders but they don\'t take applications at their foreign embassies.</p>
 
 <p>There is a relatively small resettlement programme in place, which moves refugees directly from camps to European countries but you would first have to be in a refugee camp to find out if you were eligible for this.		( XXX Put stat in about asylum applications from Syrians across whole of Europe. )</p>
