--- a/src/html/content/italy_to_sweden.mustache
+++ b/src/html/content/italy_to_sweden.mustache
@@ -2,4 +2,4 @@
 
 <p>You now have two choices. 1 Stay in Patras and try again. (Go to scene 14) 2 You can’t face any more travelling so decide to stay in Athens for now. (Go to scene 10) </p> 
 
-<p>Some European countries (which? France?) threatened Greece (in 2012?) with removal from the Schengen agreement if it didn't tighten its borders. Greece is under enormous pressure to stop migrants crossing its borders, as is Turkey. Illegal 'push backs' have been reported on this Adriatic route.</p>
+<p>Some European countries (which? France?) threatened Greece (in 2012?) with removal from the Schengen agreement if it didn\'t tighten its borders. Greece is under enormous pressure to stop migrants crossing its borders, as is Turkey. Illegal \'push backs\' have been reported on this Adriatic route.</p>
