--- a/src/html/content/life_in_athens.mustache
+++ b/src/html/content/life_in_athens.mustache
@@ -1,6 +1,6 @@
 <p>You have connections within the refugee community in Athens and there are church groups who provide food for families with children. But one day when you are waiting outside the church at lunchtime the police arrive and take you and your children to a detention centre. Your son, who is only 14, is taken away and put into the male section of the camp with adult men. You and your daughter have to share a room with several other women, there is very little fresh water and XXX?</p> 
 
-<p>Thousands of asylum seekers are detained in Greece (?) each year and held in what have been described as 'appalling conditions' by the EU home affairs commissioner (name? link?). These periods of detention can last for up to 18 months for administrative purposes only.</p> 
+<p>Thousands of asylum seekers are detained in Greece (?) each year and held in what have been described as \'appalling conditions\' by the EU home affairs commissioner (name? link?). These periods of detention can last for up to 18 months for administrative purposes only.</p> 
 
 <p>Greece has focused on reinforcing its external borders and started a policy which relies heavily on detention. Despite the Greek authorities’ determination to improve often deplorable detention conditions and the asylum system generally, much remains to be done. The difficult economic context in Greece is contributing to rising social tension as well as increasing racism and xenophobia with far right groups on the rise.</p> 
 
