--- a/src/html/content/resettlement.mustache
+++ b/src/html/content/resettlement.mustache
@@ -1,6 +1,6 @@
 <p>The UNHCR has called for 30,000 of the most vulnerable Syrian refugees to be directly resettled into western countries via a screening process that is taking place in camps across the region.</p>
 
-<p>Unfortunately for you, the numbers being offered this chance are very low compared to the numbers fleeing Syria. Excluding Germany, the remaining 27 EU member states have offered to take only 2,340 refugees directly from Syria. Eighteen member states, including the UK and Italy, have refused to take part, drawing condemnation from leading refugee agencies. The response so far has been criticised as 'shameful' by Amnesty International and 'feeble' by UNHCR. The country that has offered the most places is Germany, which has said it will take 10,000 people directly from camps. </p>
+<p>Unfortunately for you, the numbers being offered this chance are very low compared to the numbers fleeing Syria. Excluding Germany, the remaining 27 EU member states have offered to take only 2,340 refugees directly from Syria. Eighteen member states, including the UK and Italy, have refused to take part, drawing condemnation from leading refugee agencies. The response so far has been criticised as \'shameful\' by Amnesty International and \'feeble\' by UNHCR. The country that has offered the most places is Germany, which has said it will take 10,000 people directly from camps. </p>
 
 <p>VIDEO INSERT - Somali man now settled in Sweden. ??</p>
 
