--- a/src/html/content/greek_border.mustache
+++ b/src/html/content/greek_border.mustache
@@ -13,5 +13,5 @@
     <p>Your user agent does not support the HTML5 Video element.</p>
 </video>
 
-    <p>A <a href="http://ecre.org/component/content/article/70-weekly-bulletin-articles/486-pro-asyl-accuses-greece-of-systematically-pushing-back-refugees-at-the-greek-turkish-border.html">2013 report</a> detailed evidence of an illegal 'push back' policy on both the land and sea border between Turkey and Greece. You make your way back to Istanbul where you now have two choices.
+    <p>A <a href="http://ecre.org/component/content/article/70-weekly-bulletin-articles/486-pro-asyl-accuses-greece-of-systematically-pushing-back-refugees-at-the-greek-turkish-border.html">2013 report</a> detailed evidence of an illegal \'push back\' policy on both the land and sea border between Turkey and Greece. You make your way back to Istanbul where you now have two choices.
 </p>
