--- a/src/html/content/aleppo.mustache
+++ b/src/html/content/aleppo.mustache
@@ -1,9 +1,9 @@
 <p>Your name is Karima. You are a 28-year-old Sunni woman from Aleppo, and you have two children, a girl aged 10 and a boy aged 14.</p>
 
-<h2>Audio sample</h2>
+
 <audio controls="" preload="none">
-    <source src="http://www.html5rocks.com/en/tutorials/audio/quick/test.mp3" type="audio/mpeg">
-    <source src="http://www.html5rocks.com/en/tutorials/audio/quick/test.ogg" type="audio/ogg">
+	<source src="http://www.html5rocks.com/en/tutorials/audio/quick/test.mp3" type="audio/mpeg" />
+	<source src="http://www.html5rocks.com/en/tutorials/audio/quick/test.ogg" type="audio/ogg" />
 </audio>
 
 
