--- a/src/html/view_scene.mustache
+++ b/src/html/view_scene.mustache
@@ -6,6 +6,7 @@
             {{#insertImg}}
                 <img src="{{ insertImg }}" class="insert-image" />
             {{/insertImg}}
+            {{@index}}
             {{{ sceneContent }}}
         </div>
 
