--- a/src/html/content/asylum_1.mustache
+++ b/src/html/content/asylum_1.mustache
@@ -1,9 +1,3 @@
-<p>You do your research and find out Sweden announced in September 2013 that it would give permanent residence to all Syrian refugees.</p>
+<p>You find out that in September 2013, <a href="http://www.bbc.co.uk/news/world-europe-24635791">Sweden announced that it would give permanent residence to all Syrian refugees</a>. Two of your cousins have been given asylum in Stockholm and they tell you life is Sweden is better than a refugee camp. But there is a catch. In order to apply for asylum in Sweden you need to get there - you can’t apply from outside the country. This rule goes for the whole of Europe.</p>
 
-<p>Sweden has received about 14,700 asylum applications from Syrians since early 2012. Among them are members of your family who you speak to regularly on the phone. They tell you that they are being given support in building a new life there and that they would help if you came, wiring money along the way to make your savings go further.</p>
-
-<p>Unfortunately there is a catch. In order to apply for asylum in Sweden you need to actually get there first. This is true of most northern European countries.</p>
-
-<p>For example, The UK and France have high recognition rates for Syrians who apply for asylum within their borders but they don\'t take applications at their foreign embassies.</p>
-
-<p>There is a relatively small resettlement programme in place, which moves refugees directly from camps to European countries but you would first have to be in a refugee camp to find out if you were eligible for this.		( XXX Put stat in about asylum applications from Syrians across whole of Europe. )</p>
+<p>How do you get there? The safest and easiest way is to travel by plane. The alternative is to make your way overland to Turkey and then on from one of the large refugee camps there. You have heard that <a href="http://www.unhcr.org/523076919.html>"the most vulnerable refugees are being airlifted from such camps directly into northern European countries</a>.</p>
