--- a/src/html/content/into_greece.mustache
+++ b/src/html/content/into_greece.mustache
@@ -1,3 +1,3 @@
-<p>
-    This time, after paying the smugglers again, you are one of the dwindling number who do make it over the Evros border and into Greece. (do we have a story to illustrate this???). After crossing the border you travel to Athens (how?). Friends in the Syrian community in Istanbul have given you the contact details of a church that helps refugee families so you head there. Now you are here you have two choices.
-</p>
+<p>You pay the smugglers again and this time, make it across the border. The smugglers see you as far as Athens where you have the contact details of a church that helps refugee families. They give you a floor space to sleep on with your children and hot food each day.</p>
+
+<p>Now you are here you have two choices.</p>
