--- a/src/html/content/stay_in_turkey.mustache
+++ b/src/html/content/stay_in_turkey.mustache
@@ -1,7 +1,5 @@
-<p>
-    You can’t work but you are not under attack so you have a sense of safety. The camp you are in is not a bad one and the Turkish government is doing what it can to provide an education for your children and they are able to go to school for a few hours a day.</p>
+<p>You can’t work, but you are not under attack. The Turkish government is doing what it can to provide an education for your children and they are able to go to school for a few hours a day.</p>
 
-<p>You meet your neighbours and eventually start to feel at home in the camp. One of them has a Palestinian grandfather who knows people from his childhood who went to a refugee camp in Lebanon in 1948 and are still there. You wonder if your children will spend their entire lives in this camp. Your story is not over, but nor is it continuing. You stay in Turkey and hope that the peace talks succeed and you can return to Syria soon.</p>
+<p>You have the support and friendship of a large Syrian community, both in the camp and also in cities like Istanbul if you choose to move there and work under the radar. Officially there are now nearly 600,000 Syrian refugees in Turkey, as well as refugees from Iran, Iraq and Turkey.</p>
 
-
-<p>It is estimated (by who?) that there could be a million Syrians living in Turkey by the end of 2014. The UNHCR and other aid organisations have warned of the pressure this is putting on Turkey and also on neighbouring Jordan and Lebanon.</p>
+<p>One of your friends in Turkey has a Palestinian grandfather who has been living in the same camp in Lebanon since 1948. You hope that Syria will be peaceful one day so you can go home - but live with a daily dread that you and your children will live the rest of your lives in limbo.</p>
