--- a/src/html/content/greek_border.mustache
+++ b/src/html/content/greek_border.mustache
@@ -1,9 +1,8 @@
-<p>
-    You decide that however dangerous the journey across the Greek border might be, it’s better than staying in a camp indefinitely. If you make it to northern Europe you should be able to work and move on with your life until it is safe to return to Syria. You leave the camp and take your children to Istanbul, which is full of migrants from across the Middle East and Asia, as well as people smugglers who offer to take you into Greece for a price.</p>
+<p>However dangerous the journey across the Greek border might be, it has to better than sitting in a camp indefinitely. If you make it to northern Europe, you reason, you have the chance of international protection and with it the right to work and lead a relatively normal life until it’s safe to return to Syria. You leave the camp with your children and head to Istanbul, where friends in the Syrian community put you in touch with a people smuggler. He promises - for a price  - to help you cross the Greek border.</p>
 
-<p>    Unfortunately you do not make it across the Greek border. For the past decade this has been the main route to cross irregularly into the EU, with over 90 % of migrants doing so in 2012. Since 2010 there has been a huge increase in EU support for border protection in the Evros region where most migrants cross. (stat here about numbers dropping). In 2012, 8,000 Syrians were arrested on the Greek border.</p> 
+<p>It was a promise he was unable to keep. Your group is stopped by border guards on crossing into Greece. They treat you roughly, some people are beaten. They take you back into Turkey without giving you the chance to plead for asylum in Greece.</p> 
 
-<p> You are stopped by border guards who are abusive to you and your children. They take you back to Turkey without assessing whether you are in need of refugee protection even though this is a breach of international law.</p>
+<p>A recent report detailed evidence of an <a href="http://ecre.org/component/content/article/70-weekly-bulletin-articles/486-pro-asyl-accuses-greece-of-systematically-pushing-back-refugees-at-the-greek-turkish-border.html">illegal ‘push back’ policy</a> on both the land and sea border between Turkey and Greece.</p>
 
 <h2>Illegal pushback</h2>
 <video id="video" controls="" preload="none" poster="vlcsnap-2013-12-20-16h54m27s251.png">
@@ -13,5 +12,4 @@
     <p>Your user agent does not support the HTML5 Video element.</p>
 </video>
 
-    <p>A <a href="http://ecre.org/component/content/article/70-weekly-bulletin-articles/486-pro-asyl-accuses-greece-of-systematically-pushing-back-refugees-at-the-greek-turkish-border.html">2013 report</a> detailed evidence of an illegal \'push back\' policy on both the land and sea border between Turkey and Greece. You make your way back to Istanbul where you now have two choices.
-</p>
+<p>Your funds depleted, you make your way back to Istanbul.</p>
