more text changes

--- a/src/html/content/bulgaria_again.mustache
+++ b/src/html/content/bulgaria_again.mustache
@@ -1,8 +1,8 @@
-<p>When you reach the border this time the guards take you to one of several camps that have been set up to house Syrian refugees.</p>
+<p>You are convinced you have to do whatever it takes to get your children into Europe. You will attempt the crossing to Bulgaria again. Again, when you reach the border you are picked up by guards but this time, they drive you into Bulgaria, bound for one of several camps that have been set up to house Syrian refugees. You are taken to Harmanli camp. It is an open air detention centre and you are not allowed to leave. You are unable to move further into Europe or turn back and return to Turkey. The conditions are terrible. There is next to no official presence, no reception process and very little food.</p>
 
-<p>You are told that the camp is called Harmanli. It is an open air detention centre and you are not allowed to leave, so there is no chance to move further into Europe or turn back and return to Turkey. The conditions are extremely bad, with little or no official presence, no reception process and very little food. Many thousands of migrants, not only Syrians, but Afghans, Bangladeshis and even some Africans have started to take what was previously a barely used route via Turkey into Bulgaria and therefore the EU. According to  Amnesty International, an estimated 5,000 refugees from Syria arrived between January and November 2013. </p>
+<p>Many thousands of migrants, not only Syrians, but Afghans, Bangladeshis and even some Africans have started to take what was previously a barely used route into the EU, from Turkey and into Bulgaria. Amnesty International estimate that 5,000 refugees from Syria arrived between January and November 2013.</p>
 
-<p>In a recent visit, the Guardian found a complete lack of official support for newly arrived refugees and very poor conditions inside. One heavily pregnant woman, separated from her husband in Turkey, was refused permission to leave the camp to give birth.</p>
+<p>At Harmanli, the Guardian found a lack of official support for newly arrived refugees, many of them women and children, and dire conditions.</p>
 
 <h2>A Harmanli story</h2>
 <video id="video" controls="" preload="none" poster="vlcsnap-2013-12-20-16h57m47s41.png">
@@ -12,4 +12,4 @@
     <p>Your user agent does not support the HTML5 Video element.</p>
 </video>
 
-<p>There is no way forward or back for you. The UNHCR is pushing for improved conditions in Bulgaria and the (Bulgarian?) government has promised to provide more support but for now, you are stuck.</p>
+<p>There is no way forward or back for you. The UNHCR is pushing for improved conditions in Bulgaria and the government has promised to provide more support but for now, you are stuck.</p>
