--- a/src/html/content/italy_to_sweden.mustache
+++ b/src/html/content/italy_to_sweden.mustache
@@ -1,5 +1,5 @@
-<p> Even though you don’t have documents allowing you to travel legally within the EU, you follow a path many others have taken and try to travel by boat via the Adriatic to Italy, from there you will be able to get a train onwards into Europe. You go to the main Greek port, Patras and arrive in Bari in Italy. Un (need to do a bit more research here on what happens on this journey).</p> 
+<p>Even though you don’t have documents allowing you to travel legally within the EU, you follow a well-worn path and attempt to travel by boat across the Adriatic to Italy. You know once you get there you’ll be able to get on a train and head north into Europe. At the major Greek port, Patras, you manage to pile your children onto the back of a lorry travelling on a ferry to Bari, Italy, and hide.</p> 
 
-<p>You now have two choices. 1 Stay in Patras and try again. (Go to scene 14) 2 You can’t face any more travelling so decide to stay in Athens for now. (Go to scene 10) </p> 
+<p>What you didnt’ know is that there is a readmissions agreement between Italy and Greece, designed to stop illegal immigration. It shouldn’t apply to people in need of international protection, but the men who find you in the lorry are not interested in your story. You tell them you are from Syria, <a href="http://oppenheimer.mcgill.ca/Medici-per-i-Diritti-Umani">but they put you back on the next boat to Patras</a>.</p> 
 
-<p>Some European countries (which? France?) threatened Greece (in 2012?) with removal from the Schengen agreement if it didn\'t tighten its borders. Greece is under enormous pressure to stop migrants crossing its borders, as is Turkey. Illegal \'push backs\' have been reported on this Adriatic route.</p>
+<p>You now have two choices.</p>
