--- a/src/html/content/sweden_via_italy.mustache
+++ b/src/html/content/sweden_via_italy.mustache
@@ -1,1 +1,2 @@
-<p>This time you make it into Italy (add more detail).  You have two choices.</p>
+<p>You and your children get on a boat at Patras, hidden in the back of a lorry. When you arrive in Italy, you manage to creep off the boat undetected.</p>
+<p>You now have two choices.</a>
