--- a/src/html/content/bulgaria.mustache
+++ b/src/html/content/bulgaria.mustache
@@ -1,3 +1,6 @@
-<p>You pay a people smuggler to lead you with a group of people through dense forests along the border between Turkey and Bulgaria. When you reach the Bulgarian border, armed men appear, line you all up and ask for ID. They then force your group into the back of their van and drive back towards (Turkish town? need to check) where they leave you. All the children are crying as you walk back towards XX (town?). Eventually you make it back to Istanbul.</p> 
+<p>You pay a smuggler and join group of people they lead through dense forests along the border of Turkey and Bulgaria.
+</p> 
 
-<p>Even though such \'push backs\' are illegal, there have been reports of Syrians being turned away at the Bulgarian border, or driven straight back to Turkey, with no access to a fair asylum procedure. VIDEO INSERT – Story from Bulgaria / Turkey of Syrians talking about illegal push backs.</p>
+<p>In the thick of the woodland, you are stopped by Bulgarian border guards who pile your group into a van. The children are terrified and crying. The Bulgarian guards drive you back to Turkey. You aren’t sure if you reached Bulgarian territory or not, but you know you didn’t make it. Some of the families you travelled with were split up on the journey and have no idea how to find each other again.</p>
+
+<p>These ‘push backs’ are illegal, but nonetheless, reports of Syrians being turned away at the Bulgarian border, or driven straight back to Turkey, with no access to a fair asylum procedure, are common.</p>
