--- a/src/html/content/sweden_by_plane.mustache
+++ b/src/html/content/sweden_by_plane.mustache
@@ -1,1 +1,3 @@
-<p>You are lucky this time. Your passports work and despite your nerves, you are allowed to board the plane.  (stat here about how many asylum applications at Stockholm airport + at other EU countries)). As soon as your reach passport control at Stockholm airport you tell them your passport is fake and that you are here to claim asylum.</p>
+<p>You’re in luck. Your passports work and despite your nerves you are allowed to board the plane.</p>
+
+<p>As soon as your reach passport control at Stockholm airport you tell them that your passports are fake and you are here to claim asylum.</p>
