--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -38,8 +38,8 @@ figure {
     }
 
     .scene-title {
-        background: rgba(0, 0, 0, 0.5);
-        color: rgba(255,255,255,0.9);
+        background: rgba(0, 0, 0, 0.4);
+        color: rgb(255,255,255);
         padding: 10px;
         margin: 0;
         font-size:12px;
