--- a/src/html/content/greek_border.mustache
+++ b/src/html/content/greek_border.mustache
@@ -1,6 +1,6 @@
-<p>However dangerous the journey across the Greek border might be, it has to better than sitting in a camp indefinitely. If you make it to northern Europe, you reason, you have the chance of international protection and with it the right to work and lead a relatively normal life until it’s safe to return to Syria. You leave the camp with your children and head to Istanbul, where friends in the Syrian community put you in touch with a people smuggler. He promises - for a price  - to help you cross the Greek border.</p>
+<p>If you make it to northern Europe you have the chance of international protection, including the right to work and a normal life until it is safe to return to Syria. You set off with your children to Istanbul, where friends in the Syrian community put you in touch with a people smuggler who promises - for a price - to help you cross the Greek border.</p>
 
-<p>It was a promise he was unable to keep. Your group is stopped by border guards on crossing into Greece. They treat you roughly, some people are beaten. They take you back into Turkey without giving you the chance to plead for asylum in Greece.</p> 
+<p>Unfortunately you are stopped by border guards who are abusive towards you and take you back in Turkey without giving you the chance to ask for asylum in Greece.</p> 
 
 <p>A recent report detailed evidence of an <a href="http://ecre.org/component/content/article/70-weekly-bulletin-articles/486-pro-asyl-accuses-greece-of-systematically-pushing-back-refugees-at-the-greek-turkish-border.html">illegal ‘push back’ policy</a> on both the land and sea border between Turkey and Greece.</p>
 
@@ -12,4 +12,4 @@
     <p>Your user agent does not support the HTML5 Video element.</p>
 </video>
 
-<p>Your funds depleted, you make your way back to Istanbul.</p>
+<p>With your funds depleted, you make your way back to Istanbul to begin again.</p>
