Fixed video aspect ratio issues.

--- a/src/html/content/greek_border.mustache
+++ b/src/html/content/greek_border.mustache
@@ -1,15 +1,17 @@
 <p>If you make it to northern Europe you have the chance of international protection, including the right to work and a normal life until it is safe to return to Syria. You set off with your children to Istanbul, where friends in the Syrian community put you in touch with a people smuggler who promises - for a price - to help you cross the Greek border.</p>
 
-<p>Unfortunately you are stopped by border guards who are abusive towards you and take you back in Turkey without giving you the chance to ask for asylum in Greece.</p> 
+<p>Unfortunately you are stopped by border guards who are abusive towards you and take you back in Turkey without giving you the chance to ask for asylum in Greece.</p>
 
 <p>A recent report detailed evidence of an <a href="http://ecre.org/component/content/article/70-weekly-bulletin-articles/486-pro-asyl-accuses-greece-of-systematically-pushing-back-refugees-at-the-greek-turkish-border.html">illegal ‘push back’ policy</a> on both the land and sea border between Turkey and Greece.</p>
 
 <h2>Illegal pushback</h2>
-<video id="video" controls="" preload="none" poster="vlcsnap-2013-12-20-16h54m27s251.png">
-    <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2013/12/20/GreeceBorderPushback_h264i.mp4" type="video/mp4">
-    <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2013/12/20/GreeceBorderPushback.webm" type="video/webm">
-    <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2013/12/20/GreeceBorderPushback_h264i.ogv" type="video/ogg">
-    <p>Your user agent does not support the HTML5 Video element.</p>
-</video>
+<div class="video_wrapper">
+    <video id="video" controls="" preload="none" poster="vlcsnap-2013-12-20-16h54m27s251.png">
+        <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2013/12/20/GreeceBorderPushback_h264i.mp4" type="video/mp4">
+        <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2013/12/20/GreeceBorderPushback.webm" type="video/webm">
+        <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2013/12/20/GreeceBorderPushback_h264i.ogv" type="video/ogg">
+        <p>Your user agent does not support the HTML5 Video element.</p>
+    </video>
+</div>
 
 <p>With your funds depleted, you make your way back to Istanbul to begin again.</p>
