--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,9 +11,23 @@ figure {
     position: relative;
 
     .scene_container {
-        position: relative;;
+        position: relative;
+
+        // Flexible video ratio
+        // http://alistapart.com/article/creating-intrinsic-ratios-for-video/
+        .video_wrapper {
+            position: relative;
+            padding-top: 25px;
+            padding-bottom: 56.25%;
+            height: 0;
+        }
+
         video {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
+            height: 100%;
         }
     }
 
