--- a/src/html/content/bulgaria_again.mustache
+++ b/src/html/content/bulgaria_again.mustache
@@ -5,11 +5,13 @@
 <p>At Harmanli, the Guardian found a lack of official support for newly arrived refugees, many of them women and children, and dire conditions.</p>
 
 <h2>A Harmanli story</h2>
-<video id="video" controls="" preload="none" poster="vlcsnap-2013-12-20-16h57m47s41.png">
-    <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2013/12/20/BulgariaCampConditions_h264i.mp4" type="video/mp4">
-    <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2013/12/20/BulgariaCampConditions.webm" type="video/webm">
-    <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2013/12/20/BulgariaCampConditions_h264i.ogv" type="video/ogg">
-    <p>Your user agent does not support the HTML5 Video element.</p>
+<div class="video_wrapper">
+    <video id="video" controls="" preload="none" poster="vlcsnap-2013-12-20-16h57m47s41.png">
+        <source id="mp4" src="http://cdn.theguardian.tv/interactive/mp4/768/2013/12/20/BulgariaCampConditions_h264i.mp4" type="video/mp4">
+        <source id="webm" src="http://cdn.theguardian.tv/interactive/WebM/768/2013/12/20/BulgariaCampConditions.webm" type="video/webm">
+        <source id="ogv" src="http://cdn.theguardian.tv/interactive/oggv/768/2013/12/20/BulgariaCampConditions_h264i.ogv" type="video/ogg">
+        <p>Your user agent does not support the HTML5 Video element.</p>
 </video>
+</div>
 
 <p>There is no way forward or back for you. The UNHCR is pushing for improved conditions in Bulgaria and the government has promised to provide more support but for now, you are stuck.</p>
