--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -29,6 +29,15 @@ figure {
             width: 100%;
             height: 100%;
         }
+
+        .photocredit {
+            margin: 0;
+            color: rgba(255, 255, 255, 0.9);
+            font-family: verdana, arial, sans-serif;
+            font-size: 9px;
+            text-align: right;
+            padding: 0px 6px;
+        }
     }
 
     .scene {
