--- a/src/html/view_scene.mustache
+++ b/src/html/view_scene.mustache
@@ -1,4 +1,7 @@
 <div class="scene">
+    {{#coverCredit}}
+        <p class="photocredit">{{ coverCredit }}</p>
+    {{/coverCredit}}
     <h2 class="scene-title">{{ title }}</h2>
     <div class="scene-inner">
 
