lots of text and journey changes

--- a/src/html/content/stay_in_turkey.mustache
+++ b/src/html/content/stay_in_turkey.mustache
@@ -1,5 +1,5 @@
-<p>You can’t work, but you are not under attack. The Turkish government is doing what it can to provide an education for your children and they are able to go to school for a few hours a day.</p>
+<p>You can’t work legally, but you are not under attack. If you stay in a camp, the Turkish government will do what it can to provide an education for your children and they are able to go to school for a few hours a day. You can leave the camp at any time.</p>
 
-<p>You have the support and friendship of a large Syrian community, both in the camp and also in cities like Istanbul if you choose to move there and work under the radar. Officially there are now nearly 600,000 Syrian refugees in Turkey, as well as refugees from Iran, Iraq and Turkey.</p>
+<p>You have the support and friendship of a large Syrian community, either in the camp or in cities such as Istanbul if you choose to move there and work under the radar. Officially there are now nearly 600,000 Syrian refugees in Turkey, as well as refugees from Iran, Iraq and Turkey.</p>
 
 <p>One of your friends in Turkey has a Palestinian grandfather who has been living in the same camp in Lebanon since 1948. You hope that Syria will be peaceful one day so you can go home - but live with a daily dread that you and your children will live the rest of your lives in limbo.</p>
