--- a/src/html/content/bulgaria.mustache
+++ b/src/html/content/bulgaria.mustache
@@ -3,4 +3,4 @@
 
 <p>As you travel through the forests you are stopped by Bulgarian border guards who make you all get in a van. They drive you back to Turkey, the children crying all the way back. You aren’t sure if you reached Bulgarian territory or not, but you know you didn’t make it. Some of the families you travelled with were split up on the journey and have no idea how to reunite.</p>
 
-<p>Even though such 'push backs' are illegal, there have been reports of Syrians being turned away at the Bulgarian border, or driven straight back to Turkey, with no access to a fair asylum procedure.</p>
+<p>Even though such ’push backs’ are illegal, there have been reports of Syrians being turned away at the Bulgarian border, or driven straight back to Turkey, with no access to a fair asylum procedure.</p>
