--- a/src/html/content/refugee_life_in_italy.mustache
+++ b/src/html/content/refugee_life_in_italy.mustache
@@ -1,4 +1,4 @@
-<p>When you find border officials in Bari you want to claim asylum. They give you a cash payment of €200 and train tickets to Rome where you claim asylum and are given a temporary place to stay.</p> 
+<p>When you find border officials in Bari you want to claim asylum. They give you a cash payment of 200 euros and train tickets to Rome where you claim asylum and are given a temporary place to stay.</p> 
 
 <p>Eventually you are given refugee status, but there is no welfare support or housing, as there would have been in Sweden or the UK. You rely on church groups for food and Italian lessons.</p> 
 
